--- a/.github/ISSUE_TEMPLATE/bug-反馈.yml
+++ b/.github/ISSUE_TEMPLATE/bug-反馈.yml
@@ -1,7 +1,5 @@
 name: "Bug 反馈"
 about: "遇到Bug请在这里反馈。"
-labels: [· Bug, 新]
-
 body:
 - type: checkboxes
   id: "yml-1"
@@ -14,21 +12,21 @@ body:
 - type: textarea
   id: "yml-2"
   attributes:
-    label: 描述
+    label: "描述"
     description: "详细描述该 Bug 的具体表现。"
   validations:
     required: true
 - type: textarea
   id: "yml-3"
   attributes:
-    label: 重现步骤
+    label: "重现步骤"
     description: "详细描述要怎么操作才能再次触发这个 Bug。"
   validations:
     required: true
 - type: textarea
   id: "yml-4"
   attributes:
-    label: 日志与附件
+    label: "日志与附件"
     description: "上传 SysLite 文件夹中的 *.log 文件。[日志在哪？]()"
     placeholder: "先点击这个文本框，然后再将文件直接拖拽到文本框中以上传。"
   validations:
